cms/workflow/frontend/src/test/resources/log4j-filters.txt
#
#  Copyright 2013-2013 Hippo B.V. (http://www.onehippo.com)
#
#  Licensed under the Apache License, Version 2.0 (the  "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS"
#  BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

Error initializing content for .*translation-locale-provider.*
Error initializing content for .*layout-provider.xml.*
Error initializing content for .*default-editor-factory.xml.*
Error initializing content for .*hippostd-editor-factory.xml.*
Error initializing content for .*translation-hide-translations-folder.xml.*
^Error initializing content for .*cms-validators.*$
^Error initializing content for .*validatorLoader.xml.*$
^Error initializing content for .*admin-workflowmenu.xml.*$
^Error initializing content for .*cms.xml.*$
^Error initializing content for .*resource-required.*$
^Error initializing content for .*translation-treenode-icon-service.xml.*$